configurated general folder structure

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="author" content="Ivan Sarabeev" />
+    <meta name="keywords" content="finances, monitoring, planining, income, expenses, tracking, daily, weekly, montly, yearly" />
+    <meta name="description" content="Track your income & expenses and monitor your montly budge" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <title>myFinance</title>
   </head>
   <body>
     <div id="root"></div>
