feat: completed user registration flow

--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,11 @@
     <meta name="author" content="Ivan Sarabeev" />
     <meta name="keywords" content="finances, monitoring, planining, income, expenses, tracking, daily, weekly, montly, yearly" />
     <meta name="description" content="Track your income & expenses and monitor your montly budge" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <title>myFinance</title>
+    <meta name="google" content="notranslate">
+    <meta name="color-scheme" content="light only">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="icon" type="image/svg+xml" href="/mini-logo.svg" />
+    <title>Manager your Finances Seamlessly</title>
   </head>
   <body>
     <div id="root"></div>
